[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-langchain-agentic-rag-system"
version = "0.1.0"
description = "Production-grade Agentic RAG system with FAISS and Gemini embeddings"
authors = [{name = "Harshad Humane", email = "harshadhumane18@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.7.4",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "tqdm>=4.66.1",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "langgraph>=0.2.45",
    "langchain>=0.2.16",
    "langchain-community>=0.2.16",
    "langchain-google-genai>=1.0.10",
    "langchain-core>=0.1.0",
    "aiosqlite>=0.19.0",
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3